--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -17,12 +17,12 @@
 
 .bg-color
   &-1
-    background-color: #EAF8FD
+    background-color: #D7F9FE
   &-2
-    background-color: #FFFBE8
-  &-3
+    background-color: #F6ECAA
+  //&-3
     background-color: #F0E9F6
-  &-4
+  //&-4
     background-color: #EAF8FD
   &-info
     background-color: #E8EEFD
