--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -20,17 +20,40 @@
     background-color: #D7F9FE
   &-2
     background-color: #F6ECAA
-  //&-3
-    background-color: #F0E9F6
-  //&-4
-    background-color: #EAF8FD
+  &-3
+    background-color: #DCE8FA
+  &-4
+    background-color: #F2F1F5
+  &-5
+    background-color: #FCF9E5
+  &-6
+    background-color: #D9D5E3
+  &-7
+    background: linear-gradient(0deg, rgba(235,233,240,1) 0%, rgba(255,255,255,1) 100%)
+  &-8
+    background-color: #EBE9F0
   &-info
     background-color: #E8EEFD
   &-sintesis
     background-color: #F9F9F9
   &-white
     background-color: #fff
+.bg_img
+  position: relative
+  p, figure, .tarjeta, h2
+    position: relative
+  &::before
+    content: ''
+    position: absolute
+    margin: 0
+    top: 0
+    left: -48px
+    width: calc(100% + 96px)
+    height: calc(100% + 200px)
+    background: linear-gradient(0deg, rgba(235,233,240,1) 0%, rgba(255,255,255,1) 100%)
 
+.audio__btn
+  background-color: $color-acento-contenido !important
 .border-top
   &.color-primario
     border-top: 5px solid $color-primario !important
@@ -48,10 +71,18 @@
   @media screen and (max-width: $bp-max-sm)
     padding-left: 1.5rem
     padding-right: 1.5rem
+.bg-full-width-2
+  background-size: contain
+  background-repeat: no-repeat
+  background-position: bottom
+  margin-inline: -3.3rem
+  @media screen and (max-width: $bp-max-sm)
+    padding-left: 1.5rem
+    padding-right: 1.5rem
 
 .bg-fondo
   &-1
-    background-image: url("../assets/bg/bg1.png") !important
+    background-image: url("../assets/bg/bg1.svg") !important
     background-position: top
   &-2
     // background-image: url("../assets/bg/bg2.png") !important
@@ -73,7 +104,7 @@ $custom-card-img-height: 322px
   box-shadow: $custom-card-shadow
   height: 100%
   background-color: $custom-card-text-bg
-  transition: transform 0.3s ease 
+  transition: transform 0.3s ease
   cursor: pointer
   &:hover
     transform: scale(1.01)
@@ -87,14 +118,13 @@ $custom-card-img-height: 322px
   box-shadow: $custom-card-shadow
   height: 100%
   background-color: $custom-card-text-bg
-  transition: transform 0.3s ease 
+  transition: transform 0.3s ease
   cursor: pointer
   &:hover
     transform: scale(1.01)
   &__image
     height: 253px
     object-fit: cover
-
 
 .acordion__header
   background-color: lighten($color-acento-contenido, 25%) !important
@@ -107,7 +137,6 @@ $custom-card-img-height: 322px
 .acordion__contenido
   background-color: lighten($color-acento-contenido, 27%) !important
 
-
 .anexo__texto
   p, strong
     font-size: 14px !important
@@ -116,12 +145,11 @@ $custom-card-img-height: 322px
 .bloque-texto-c
   padding: 34px !important
   p
-    font-size: 22px  !important
+    font-size: 22px !important
     line-height: 26.4px !important
     font-weight: 700 !important
   i
     color: $color-primario !important
-
 
 .bg-ppal-claro
   background-color: #F7F4ED
@@ -133,7 +161,6 @@ $custom-card-img-height: 322px
   background-color: #1172B3
 .bg-red-claro
   background-color: #FCDFDB !important
-
 
 .box-shadow
   box-shadow: 0 4px 8px rgba(0,0,0,0.1)
@@ -159,7 +186,6 @@ $custom-card-img-height: 322px
   width: 48px !important
   @media screen and (max-width: $bp-max-sm)
     width: 38px !important
-  
 
 .img-infografica__item__dot:before, .img-infografica-b__item__dot:before
   opacity: 1
@@ -168,7 +194,7 @@ $custom-card-img-height: 322px
 
 .img-infografica__card, .img-infografica-b__card
   width: 350px !important
-  
+
 .img-infografica__item__numero
   font-weight: 900
 
@@ -203,7 +229,7 @@ $custom-card-img-height: 322px
 
 .border-top.color-primario
   border-top: 5px solid $color-primario !important
-  
+
 .material-complementario
   p,a
     font-size: 1rem !important
